# srt-term-converter

./: .gitignore  LICENSE  README.md  pyproject.toml  replace_terms.csv
src/: elevenlabs.py  main.py
