[project]
name = "srt-term-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "fdt-naoki-sakamoto",email = "naoki.sakamoto@fastdoctor.jp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pep8-naming = "^0.14.1"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
